# AnyCache

./: Agents.md  CMakeLists.txt  README.md
.cursor/rules/: cmake-conventions.mdc  cpp-code-style.mdc  design-docs.mdc  documentation.mdc  fuse-rules.mdc  master-rules.mdc  project-conventions.mdc  rpc-rules.mdc  testing-conventions.mdc  worker-rules.mdc
benchmark/: cache_benchmark.cpp
cmake/: FetchMiniocpp.cmake
cmake/patches/: inih-patch.cmake  miniocpp-patch.cmake
config/: example.yaml
design/: block-id-and-file-layout.md  metadata-design.md  plan_p0-p2-feature-completion.md  plan_ufs-integration-and-cli.md  todo-01-master-rocksdb-schema-and-serialization.md  todo-02-master-metadata-persistence.md  todo-06-lock-optimization.md  todo-07-s3-ufs-integration.md  todo-08-cache-block-ufs.md  todo-09-cli-fs-commands.md  todo-10-master-config-mount.md  todo-11-writefile-new-file-fix.md
docs/: usage.md
proto/: common.proto  journal.proto  master.proto  worker.proto
src/client/: block_client.cpp  block_client.h  channel_pool.h  client_config.cpp  client_config.h  client_proto_utils.h  file_system_client.cpp  file_system_client.h
src/client/cache/: cache_client.cpp  cache_client.h
src/common/: config.cpp  config.h  logging.h  metrics.h  metrics_server.cpp  metrics_server.h  proto_utils.h  status.cpp  status.h  types.h
src/fuse/: fuse_main.cpp  fuse_operations.cpp  fuse_operations.h
src/master/: block_master.cpp  block_master.h  file_system_master.cpp  file_system_master.h  inode_entry.h  inode_store.cpp  inode_store.h  inode_tree.cpp  inode_tree.h  master_server.cpp  master_server.h  master_service_impl.cpp  master_service_impl.h  mount_table.cpp  mount_table.h  worker_manager.cpp  worker_manager.h
src/master/journal/: journal_writer.cpp  journal_writer.h  raft_journal.cpp  raft_journal.h
src/ufs/: local_ufs.cpp  local_ufs.h  s3_ufs.cpp  s3_ufs.h  ufs.h  ufs_factory.cpp  ufs_factory.h
src/worker/: block_store.cpp  block_store.h  cache_manager.cpp  cache_manager.h  data_mover.cpp  data_mover.h  master_client.cpp  master_client.h  meta_store.cpp  meta_store.h  page_store.cpp  page_store.h  storage_tier.cpp  storage_tier.h  worker_server.cpp  worker_server.h  worker_service_impl.cpp  worker_service_impl.h
tests/client/: cache_client_test.cpp
tests/common/: config_test.cpp  status_test.cpp
tests/master/: block_master_test.cpp  inode_entry_test.cpp  inode_store_test.cpp  inode_tree_test.cpp  mount_table_test.cpp
tests/ufs/: local_ufs_test.cpp
tests/worker/: block_store_test.cpp  cache_manager_test.cpp  data_mover_test.cpp  page_store_test.cpp  storage_tier_test.cpp  worker_service_impl_test.cpp
tools/: anycache_cli_main.cpp  anycache_master_main.cpp  anycache_worker_main.cpp
